--- a/package.json
+++ b/package.json
@@ -39,5 +39,6 @@
     "react-scripts": "4.0.3",
     "use-sound": "^4.0.1",
     "web-vitals": "^1.0.1"
-  }
+  },
+  "packageManager": "yarn@1.22.19+sha1.4ba7fc5c6e704fce2066ecbfb0b0d8976fe62447"
 }
