--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-rounded-image": "^2.0.11",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "use-sound": "^4.0.1",
     "web-vitals": "^1.0.1"
   },
